# wreporter

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  app.py  chainlit.md  docker-compose.yml  index.html  pyproject.toml  reference_n8n_finance.json  rxconfig.py
.chainlit/: config.toml
.claude/: launch.json  settings.json  settings.local.json
.claude/commands/: check-step.md  code-review.md  done.md  explain.md  fix-error.md  learn.md  remember.md  start-step.md  test-all.md  verify-db.md
chainlit_app/: admin_handler.py  handlers.py  pin_manager.py  ui_helpers.py
clients/: claude.py  dart.py  fsc.py  nicebiz.py  serper.py  web.py
core/: admin.py  agent.py  cache.py  tools.py
db/: artifacts.py  client.py  conversations.py  pins.py  queries.py
docs/: 오픈API 활용자가이드_금융위원회_기업기본정보.docx
prompts/: __init__.py  system_executives.md  system_finance.md  system_general.md
public/: custom.css
supabase/.temp/: pooler-url  project-ref
supabase/migrations/: 20260224_phase2_tables.sql  20260225_optimize.sql  20260226_add_eng_name.sql
tests/: test_config.py
tests/fixtures/: dart_disclosures.json  dart_executives.json  dart_finance.json  serper_search.json
tests/practice/: test_practice_01_async.py
tests/test_clients/: conftest.py  test_dart.py  test_fsc.py  test_serper.py  test_supabase.py  test_web.py
tests/test_core/: conftest.py  test_admin.py  test_agent.py  test_cache.py  test_prompts.py  test_tools.py
tests/test_db/: conftest.py  test_artifacts.py  test_conversations.py  (+1 more)
utils/: config.py  logger.py
wreporter/: __init__.py  wreporter.py
(+12 files in other folders)
